# DTree

./: ChangeLog  Makefile.in  README.md  configure  configure.ac
src/: Makefile.am  Makefile.in
src/DTree/: DTest.cpp  DTrain.cpp  DTshowtree.cpp  Makefile.am  Makefile.in
src/inc/: DTree.h  Makefile.am  Makefile.in  Question.h  SparseTree.h  enumcode.h
src/libDTree/: DTree.cpp  Makefile.am  Makefile.in  dump.cpp  enumcode.cpp  io.cpp  ioerr.cpp  optimization.cpp  progress.cpp
vc/DTree/: DTree.props  DTree.sln
vc/DTree/DTest/: DTest.vcxproj
vc/DTree/DTrain/: DTrain.vcxproj
vc/DTree/DTshowtree/: DTshowtree.vcxproj
vc/DTree/dtree/: dtree.vcxproj
