

bin_PROGRAMS=DTest DTrain DTshowtree
DTest_SOURCES=DTest.cpp
DTest_CPPFLAGS=-I $(abs_srcdir)/../inc
DTest_LDADD=$(abs_builddir)/../libDTree/libDTree.a
DTrain_SOURCES=DTrain.cpp
DTrain_CPPFLAGS=-I $(abs_srcdir)/../inc
DTrain_LDADD=$(abs_builddir)/../libDTree/libDTree.a
DTshowtree_SOURCES=DTshowtree.cpp
DTshowtree_CPPFLAGS=-I $(abs_srcdir)/../inc
DTshowtree_LDADD=$(abs_builddir)/../libDTree/libDTree.a